--- a/.tmux.conf
+++ b/.tmux.conf
@@ -19,8 +19,8 @@ set -g @plugin 'tmux-plugins/tmux-yank'
 # set -g @theme_disable_plugins true
 
 
-set -g @plugin "dracula/tmux"
-set -g @dracula-show-powerline true
+set -g @plugin "Nybkox/tmux-kanagawa"
+set -g @kanagawa-show-powerline true
 # # available plugins: battery, cpu-usage, git, gpu-usage, ram-usage, tmux-ram-usage, network, network-bandwidth, network-ping, ssh-session, attached-clients, network-vpn, weather, time, mpc, spotify-tui, kubernetes-context, synchronize-panes
 # set -g @dracula-plugins "git"
 # set -g @dracula-show-flags true
