--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,6 +1,7 @@
 set -ga terminal-overrides ",xterm-256color:Tc"
 
 set -g prefix C-space
+bind r source-file ~/.tmux.conf
 set -g mouse on
 set-window-option -g mode-keys vi
 
@@ -14,20 +15,30 @@ set -g @plugin "tmux-plugins/tmux-sensible"
 set -g @plugin "christoomey/vim-tmux-navigator"
 set -g @plugin 'tmux-plugins/tmux-yank'
 
-# set -g @plugin 'fabioluciano/tmux-tokyo-night'
-# set -g @theme_variation "storm"
-# set -g @theme_disable_plugins true
-
-
 set -g @plugin "Nybkox/tmux-kanagawa"
 set -g @kanagawa-show-powerline true
-# # available plugins: battery, cpu-usage, git, gpu-usage, ram-usage, tmux-ram-usage, network, network-bandwidth, network-ping, ssh-session, attached-clients, network-vpn, weather, time, mpc, spotify-tui, kubernetes-context, synchronize-panes
-# set -g @dracula-plugins "git"
-# set -g @dracula-show-flags true
-# # it can accept `hostname` (full hostname), `session`, `shortname` (short name), `smiley`, `window`, or any character. 
-# set -g @dracula-show-left-icon smiley
-# # the default is 5, it can accept any number
-# set -g @dracula-refresh-rate 1
+
+# `hostname` (full hostname), `session`, `shortname` (short name),
+# `smiley` (default), `window`, or any character. 
+set -g @kanagawa-show-left-icon "#{pane_id}"
+
+# Any number. Default is 1. 0 disables padding.
+set -g @kanagawa-left-icon-padding 0
+
+# Any number. Default is 5.
+set -g @kanagawa-refresh-rate 1
+set -g status-interval 1
+
+set -g @kanagawa-show-empty-plugins false
+
+# available plugins:
+# battery, cpu-usage, git, gpu-usage, ram-usage, tmux-ram-usage, network,
+# network-bandwidth, network-ping, ssh-session, attached-clients, network-vpn,
+# weather, time, mpc, spotify-tui, kubernetes-context, synchronize-panes
+set -g @kanagawa-plugins "git"
+
+# default is false
+set -g @kanagawa-git-show-remote-status true
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run "~/.tmux/plugins/tpm/tpm"
