--- a/.tmux.conf
+++ b/.tmux.conf
@@ -5,8 +5,8 @@ bind r source-file ~/.tmux.conf
 set -g mouse on
 set-window-option -g mode-keys vi
 
-bind | split-window -h
-bind _ split-window -v
+bind | split-window -h -c "#{pane_current_path}"
+bind _ split-window -v -c "#{pane_current_path}"
 unbind '"'
 unbind %
 
