--- a/.config/ghostty/config
+++ b/.config/ghostty/config
@@ -43,3 +43,6 @@
 # resize-overlay-duration = 4s 200ms
 theme = "Kanagawa Wave"
 keybind = ctrl+v=paste_from_clipboard
+font-feature = -calt
+font-feature = -liga
+font-feature = -dlig
