--- a/.tmux.conf
+++ b/.tmux.conf
@@ -14,6 +14,7 @@ set -g @plugin "tmux-plugins/tpm"
 set -g @plugin "tmux-plugins/tmux-sensible"
 set -g @plugin "christoomey/vim-tmux-navigator"
 set -g @plugin 'tmux-plugins/tmux-yank'
+set -g @plugin 'tmux-plugins/tmux-open'
 
 set -g @plugin "Nybkox/tmux-kanagawa"
 set -g @kanagawa-show-powerline true
