--- a/.tmux.conf
+++ b/.tmux.conf
@@ -18,25 +18,27 @@ set -g @plugin 'tmux-plugins/tmux-open'
 
 set -g @plugin "Nybkox/tmux-kanagawa"
 set -g @kanagawa-show-powerline true
+set -g @kanagawa-theme 'wave'
+set -g @kanagawa-ignore-window-colors true
 
 # `hostname` (full hostname), `session`, `shortname` (short name),
 # `smiley` (default), `window`, or any character. 
-set -g @kanagawa-show-left-icon "#{pane_id}"
+# set -g @kanagawa-show-left-icon "#{pane_id}"
 
 # Any number. Default is 1. 0 disables padding.
-set -g @kanagawa-left-icon-padding 0
+# set -g @kanagawa-left-icon-padding 0
 
 # Any number. Default is 5.
 set -g @kanagawa-refresh-rate 1
 set -g status-interval 1
 
-set -g @kanagawa-show-empty-plugins false
+# set -g @kanagawa-show-empty-plugins false
 
 # available plugins:
 # battery, cpu-usage, git, gpu-usage, ram-usage, tmux-ram-usage, network,
 # network-bandwidth, network-ping, ssh-session, attached-clients, network-vpn,
 # weather, time, mpc, spotify-tui, kubernetes-context, synchronize-panes
-set -g @kanagawa-plugins "git"
+set -g @kanagawa-plugins "git cpu-usage ram-usage"
 
 # default is false
 set -g @kanagawa-git-show-remote-status true
