--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -1,7 +1,7 @@
 set -ga terminal-overrides ",xterm-256color:Tc"
 
 set -g prefix C-space
-bind r source-file ~/.tmux.conf
+bind r source-file ~/.config/tmux/tmux.conf
 set -g mouse on
 set-window-option -g mode-keys vi
 
@@ -28,7 +28,7 @@ set -g @kanagawa-ignore-window-colors true
 # Any number. Default is 1. 0 disables padding.
 # set -g @kanagawa-left-icon-padding 0
 
-# Any number. Default is 5.
+# Any number. Default #is 5.
 set -g @kanagawa-refresh-rate 1
 set -g status-interval 1
 
