--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -203,6 +203,9 @@ input {
     kb_options =
     kb_rules =
 
+    repeat_delay = 250
+    repeat_rate = 75
+
     follow_mouse = 1
 
     sensitivity = 0 # -1.0 - 1.0, 0 means no modification.
@@ -236,7 +239,7 @@ bind = $mainMod, C, killactive,
 bind = $mainMod, M, exit,
 bind = $mainMod, E, exec, $fileManager
 bind = $mainMod, V, togglefloating,
-bind = $mainMod, R, exec, $menu
+bind = $mainMod, SPACE, exec, $menu
 bind = $mainMod, P, pseudo, # dwindle
 # bind = $mainMod, J, togglesplit, # dwindle
 
@@ -273,6 +276,9 @@ bind = $mainMod SHIFT, 0, movetoworkspace, 10
 # Example special workspace (scratchpad)
 bind = $mainMod, S, togglespecialworkspace, magic
 bind = $mainMod SHIFT, S, movetoworkspace, special:magic
+
+# Toggle fullscreen
+bind = $mainMod, Z, fullscreen
 
 # Scroll through existing workspaces with mainMod + scroll
 bind = $mainMod, mouse_down, workspace, e+1
