--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -1,8 +1,10 @@
-set -ga terminal-overrides ",xterm-256color:Tc"
+set -g default-terminal "tmux-256color"
+set -ga terminal-overrides ",*:RGB"
 
 set -g prefix C-space
 bind r source-file ~/.config/tmux/tmux.conf
 set -g mouse on
+set -g set-clipboard on
 set-window-option -g mode-keys vi
 
 bind | split-window -h -c "#{pane_current_path}"
@@ -16,32 +18,32 @@ set -g @plugin "christoomey/vim-tmux-navigator"
 set -g @plugin 'tmux-plugins/tmux-yank'
 set -g @plugin 'tmux-plugins/tmux-open'
 
-set -g @plugin "Nybkox/tmux-kanagawa"
-set -g @kanagawa-show-powerline true
-set -g @kanagawa-theme 'wave'
-set -g @kanagawa-ignore-window-colors true
-
-# `hostname` (full hostname), `session`, `shortname` (short name),
-# `smiley` (default), `window`, or any character. 
-# set -g @kanagawa-show-left-icon "#{pane_id}"
-
-# Any number. Default is 1. 0 disables padding.
-# set -g @kanagawa-left-icon-padding 0
-
-# Any number. Default #is 5.
-set -g @kanagawa-refresh-rate 1
+# set -g @plugin "Nybkox/tmux-kanagawa"
+# set -g @kanagawa-show-powerline true
+# set -g @kanagawa-theme 'wave'
+# set -g @kanagawa-ignore-window-colors true
+#
+# # `hostname` (full hostname), `session`, `shortname` (short name),
+# # `smiley` (default), `window`, or any character. 
+# # set -g @kanagawa-show-left-icon "#{pane_id}"
+#
+# # Any number. Default is 1. 0 disables padding.
+# # set -g @kanagawa-left-icon-padding 0
+#
+# # Any number. Default #is 5.
+# set -g @kanagawa-refresh-rate 1
 set -g status-interval 1
-
-# set -g @kanagawa-show-empty-plugins false
-
-# available plugins:
-# battery, cpu-usage, git, gpu-usage, ram-usage, tmux-ram-usage, network,
-# network-bandwidth, network-ping, ssh-session, attached-clients, network-vpn,
-# weather, time, mpc, spotify-tui, kubernetes-context, synchronize-panes
-set -g @kanagawa-plugins "git cpu-usage ram-usage"
-
-# default is false
-set -g @kanagawa-git-show-remote-status true
-
-# Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
+#
+# # set -g @kanagawa-show-empty-plugins false
+#
+# # available plugins:
+# # battery, cpu-usage, git, gpu-usage, ram-usage, tmux-ram-usage, network,
+# # network-bandwidth, network-ping, ssh-session, attached-clients, network-vpn,
+# # weather, time, mpc, spotify-tui, kubernetes-context, synchronize-panes
+# set -g @kanagawa-plugins "git cpu-usage ram-usage"
+#
+# # default is false
+# set -g @kanagawa-git-show-remote-status true
+#
+# # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run "~/.tmux/plugins/tpm/tpm"
