Improve tmux status line.

--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -18,32 +18,74 @@ set -g @plugin "christoomey/vim-tmux-navigator"
 set -g @plugin 'tmux-plugins/tmux-yank'
 set -g @plugin 'tmux-plugins/tmux-open'
 
-# set -g @plugin "Nybkox/tmux-kanagawa"
-# set -g @kanagawa-show-powerline true
-# set -g @kanagawa-theme 'wave'
-# set -g @kanagawa-ignore-window-colors true
-#
-# # `hostname` (full hostname), `session`, `shortname` (short name),
-# # `smiley` (default), `window`, or any character. 
-# # set -g @kanagawa-show-left-icon "#{pane_id}"
-#
-# # Any number. Default is 1. 0 disables padding.
-# # set -g @kanagawa-left-icon-padding 0
-#
-# # Any number. Default #is 5.
-# set -g @kanagawa-refresh-rate 1
 set -g status-interval 1
-#
-# # set -g @kanagawa-show-empty-plugins false
-#
-# # available plugins:
-# # battery, cpu-usage, git, gpu-usage, ram-usage, tmux-ram-usage, network,
-# # network-bandwidth, network-ping, ssh-session, attached-clients, network-vpn,
-# # weather, time, mpc, spotify-tui, kubernetes-context, synchronize-panes
-# set -g @kanagawa-plugins "git cpu-usage ram-usage"
-#
-# # default is false
-# set -g @kanagawa-git-show-remote-status true
-#
-# # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
+
+##### THEME #####
+
+base00=#1F1F28
+base01=#16161D
+base02=#223249
+base03=#54546D
+base04=#727169
+base05=#DCD7BA
+base06=#C8C093
+base07=#717C7C
+base08=#C34043
+base09=#FFA066
+base0A=#C0A36E
+base0B=#76946A
+base0C=#6A9589
+base0D=#7E9CD8
+base0E=#957FB8
+base0F=#D27E99
+
+thm_reg=${base06}
+thm_dark=${base01}
+thm_accent=${base0D}
+thm_contrast=${base0F}
+thm_select=${base02}
+
+text_reg="#{?client_prefix,#[fg=${thm_contrast}],#[fg=${thm_accent}]}"#[bg=${thm_dark}]
+text_acc="#{?client_prefix,#[bg=${thm_contrast}],#[bg=${thm_accent}]}"#[fg=${thm_dark}]
+
+
+# Status bar
+set -g status on
+set -g status-style bg=${thm_dark}
+set -g status-justify absolute-centre
+
+# Messages
+set -g message-style fg=${thm_reg},bg=${thm_dark},align=centre
+set -g message-command-style fg=${thm_reg},bg=${thm_dark},align=centre
+set -g prompt-cursor-colour ${thm_reg}
+
+# Panes
+set -g pane-border-style fg=${thm_dark}
+set -g pane-active-border-style fg=${thm_accent}
+
+# Windows
+# set -g window-status-activity-style "fg=${thm_reg},bg=${thm_dark},none" # TODO
+set -g window-status-separator " "
+set -g window-status-style fg=${thm_reg},bg=${thm_dark},none
+
+# Statusline - current window
+set -g window-status-current-format ${text_reg}${text_acc}"#I: #W"${text_reg}
+
+# Statusline - other windows
+set -g window-status-format ${text_reg}"#I"
+
+# Statusline - right side
+set -g status-right-length 100
+set -g status-right ${text_reg}" "${text_acc}"#{user}@#H "
+
+# Statusline - left side (empty)
+set -g status-left-length 100
+set -g status-left ${text_acc}"  #S"${text_reg}" "${text_reg}"#(echo #{pane_current_path} | sed 's|'"/home/$(whoami)"'|~|')/"
+
+# Modes
+set -g clock-mode-colour "${thm_accent}"
+set -g mode-style "bg=${thm_select}"
+
+##### END #####
+
 run "~/.tmux/plugins/tpm/tpm"
