--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -76,7 +76,7 @@ set -g window-status-format ${text_reg}"#I"
 
 # Statusline - right side
 set -g status-right-length 100
-set -g status-right ${text_reg}" "${text_acc}"#{user}@#H "
+set -g status-right "#(gitmux '#{pane_current_path}')"${text_reg}" "${text_acc}"#{user}@#H "
 
 # Statusline - left side (empty)
 set -g status-left-length 100
